# haskell_ifmo_course

./: README.md  stack.yaml
bonus/: README.md  bonus.cabal
bonus/src/: BooleanTable.hs  Magic.hs
bonus/test/: BooleanTableSpec.hs  MagicSpec.hs
hw1/: hw1.cabal
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1/src/Block2/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
hw1/src/Block3/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  TreePrinters.hs
hw1/src/Block4/: Task1.hs  Task2.hs
hw1/src/Block5/: Task1.hs  Task2.hs  Task3.hs
hw1/test/Tests/: Block1Spec.hs  Block2Spec.hs  Block3Spec.hs  Block4Spec.hs  Block5Spec.hs
hw2/: hw2.cabal
hw2/src/BaseTypeClasses/: ChaoticGood.hs
hw2/src/BaseTypeClasses/ChaoticGood/: Const.hs  Either.hs  Identity.hs  Pair.hs  Tree.hs
hw2/src/BaseTypeClasses/Fishes/: Monad.hs  MonadFish.hs  MonadFunctor.hs  MonadJoin.hs
hw2/src/Monstupar/: LetExpr.hs  Parser.hs  SExpr.hs  Simple.hs
hw2/src/Nondeterminism/: BinarySeq.hs  Combinations.hs  Permutations.hs
hw2/src/OptionalMonads/: Arithm.hs  Partial.hs
hw2/src/Parsec/: LetExpr.hs  Parser.hs  Part1.hs  Part2.hs  Part3.hs  SExpr.hs  Simple.hs
hw2/test/: MonstuparSpec.hs  NondeterminismSpec.hs  OptionalMonadsSpec.hs  ParserSpec.hs
hw3/: hw3.cabal
hw3/app/: Main.hs
hw3/src/: Interpreter.hs
hw3/src/Construction/: Error.hs  Expression.hs  MutableVar.hs  Variable.hs
hw3/src/Language/: Construction.hs  Expression.hs  MutableVar.hs  Utils.hs
hw3/src/Parsing/: ConstructionsParser.hs  ExprParser.hs  Utils.hs  VarDeclParser.hs
hw3/src/Utils/: Expression.hs
hw4/: hw4.cabal
hw4/app/: Main.hs
hw4/src/MyLenses/: BaseLens.hs
hw4/src/TH/: KosherShow.hs  ShowExample.hs  Tuple.hs
hw4/test/: MyLensSpec.hs
marik/: README.md  marik.cabal
marik/app/: Main.hs
marik/src/: Interpreter.hs
marik/src/Language/: Construction.hs  Core.hs  Expression.hs  MutableVar.hs  Utils.hs
marik/src/Parsing/: ConstructionsParser.hs  ExprParser.hs  Utils.hs
sample/: Fac.sy  Fib.sy  Incorrect1.mrk  RandomShit.mrk  Reverse.mrk  Simple.mrk  test.sy
