name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://bitbucket.org/CEMEHEX/haskell-homeworks
license:             MIT
license-file:        LICENSE
author:              Semyon Yekhmenin
maintainer:          CEMEHEX@yandex.ru
copyright:           2017 Semyon Yekhmenin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1, Block1.Task2, Block1.Task3, Block1.Task4
                     , Block2.Task1, Block2.Task2, Block2.Task3, Block2.Task4
                     , Block3.Task1, Block3.Task2, Block3.Task3, Block3.Task4, Block3.Task5, Block3.TreePrinters
                     , Block4.Task1, Block4.Task2
                     , Block5.Task1, Block5.Task2, Block5.Task3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , random
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tests.Block1Spec, Tests.Block2Spec, Tests.Block3Spec, Tests.Block4Spec, Tests.Block5Spec
  build-depends:       base
                     , hw1
                     , hspec
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
