name:                hw4
version:             0.1.0.0
synopsis:            Synopsis for task 4
description:         Task 4 for FP ITMO course

homepage:            https://bitbucket.org/CEMEHEX/haskell-homeworks
license:             MIT
license-file:        LICENSE
author:              Semyon Yekhmenin
maintainer:          CEMEHEX@yandex.ru
copyright:           2017 Semyon Yekhmenin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     TH.Tuple, TH.KosherShow, TH.ShowExample
                     , MyLenses.BaseLens
                     , Lenses.FileSystem
                     , Comonad.Renew
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , template-haskell
                     , text
                     , directory
                     , comonad
  default-language:    Haskell2010

executable hw4
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw4
  default-language:    Haskell2010

test-suite hw4-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MyLensSpec
  build-depends:       base
                     , hw4
                     , hspec
  ghc-options:         -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
